# otojsd

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  otojsc  otojsd-start.js
client-examples/: README.md
client-examples/CotEditor/: Post file to otojsd.@$~O.sh  Post selection to otojsd.@$O.sh
client-examples/VSCode/: keybindings.json  tasks.json
client-examples/html/: index.html
examples/: otojs-basic-example.js  otojs-basic-mml.js  otojs-basic.js  otojs-by-claude_opus.js  otojs-scale.js
samples/: otojs-delay.js  otojs-fm.js  otojs-sample.js  otojs-scale.js
src/: aiffrecorder.cpp  aiffrecorder.h  audiounit.cpp  audiounit.h  codeserver.cpp  codeserver.h  const.h  coreaudioutilities.cpp  coreaudioutilities.h  logger.cpp  logger.h  main.cpp  otojsd.cpp  otojsd.h  script_engine.cpp  script_engine.h  script_engine_console.cpp  script_engine_console.h
